simplified implementation
Signed-off-by: m.bogusz <m.bogusz@celonis.com>